# OpenBO1

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  bison.simple  git.h.in  stdafx.hpp
src/aim_assist/: aim_assist.cpp  aim_target.cpp
src/bgame/: bg_actor_prone.cpp  bg_animation.cpp  bg_animconditions.cpp  bg_dog.cpp  bg_dog_animations_mp.cpp  bg_dtp.cpp  bg_emblems.cpp  bg_emblems_load_db.h  bg_fire.cpp  bg_jump.cpp  bg_mantle.cpp  bg_misc.cpp  bg_misctables.cpp  bg_perks.cpp  bg_perks.h  bg_pmove.cpp  bg_public.h  bg_slidemove.cpp  bg_unlockable_items.cpp  bg_vehicle_anim.cpp  bg_vehicles_mp.cpp  bg_weapons.cpp  bg_weapons.h  bg_weapons_ammo.cpp  bg_weapons_ammo.h  bg_weapons_attachment.cpp  bg_weapons_def.cpp  bg_weapons_load_db.h  bg_weapons_load_obj.cpp  bg_weapons_util.cpp  bg_weapons_view.cpp  bg_wind.cpp
src/botlib/: l_memory.cpp  l_precomp.cpp  l_script.cpp
src/cgame/: cg_ammocounter.cpp  cg_bolt.cpp  cg_camera.cpp  cg_camerashake.cpp  cg_clouds.cpp  cg_colltree.cpp  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_indicators.cpp  cg_draw_names.cpp  cg_draw_reticles.cpp  cg_drawtools.cpp  cg_effects_load_db.h  cg_effects_load_obj.cpp  cg_event.cpp  cg_hudelem.cpp  cg_info.cpp  cg_laser.cpp  cg_local.h  cg_localents.cpp  cg_main.cpp  cg_mem_track.cpp  cg_perf.cpp  cg_playerstate.cpp  cg_pose_utils.cpp  cg_scr_main.cpp  cg_scr_main.h  cg_shellshock.cpp  cg_sound.cpp  cg_spawn.cpp  cg_spikeacoustic.cpp  cg_vehicle.cpp  cg_visionsets.cpp  cg_weapons.cpp  cg_world.cpp  offhandweapons.cpp
src/cgame_mp/: cg_actors_mp.cpp  cg_animscripted_mp.cpp  cg_animtree_mp.cpp  cg_compassfriendlies_mp.cpp  cg_consolecmds_mp.cpp  cg_draw_mp.cpp  cg_draw_net_mp.cpp  cg_ents_mp.cpp  cg_gamepad.cpp  cg_local_mp.h  cg_main_mp.cpp  cg_newdraw_mp.cpp  cg_players_mp.cpp  cg_pose_mp.cpp  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  cg_scr_main_mp.cpp  cg_servercmds_mp.cpp  cg_snapshot_mp.cpp  cg_ui_animate_mp.cpp  cg_vehicles_mp.cpp  cg_view_mp.cpp  cg_weapon_options.cpp
src/client/: cl_cin.cpp  cl_compositing.cpp  cl_console.cpp  cl_debugdata.cpp  cl_devgui.cpp  cl_gamepad.cpp  cl_keys.cpp  cl_main.cpp  cl_parse.cpp  client.h  con_channels.cpp  screen_placement.cpp  splitscreen.cpp
src/client_mp/: cl_cgame_mp.cpp  cl_input_mp.cpp  cl_main_mp.cpp  cl_main_pc_mp.cpp  cl_medal.cpp  cl_milestone.cpp  cl_net_chan_mp.cpp  cl_parse_mp.cpp  cl_pose_mp.cpp  cl_rank.cpp  cl_scrn_mp.cpp  cl_ui_mp.cpp  (+3 more)
(+689 files in other folders)
